fix for proper aligning of images in case of different image heights

--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -650,6 +650,7 @@ ul.settings-submenu li a {
     display: inline-block;
     width: 640px;
     text-align: center;
+    vertical-align: top;
 }
 
 .gallery-window {
